# dj-cloud-task

./: .gitignore  LICENCE  README.md  setup.cfg
cloudtask/: __init__.py  apps.py  client.py  configs.py  configurations.py  decorators.py  encoder.py  exceptions.py  tasks.py  urls.py  utils.py  views.py  worker.py
cloudtask/management/commands/: cloudtask-worker.py
