[metadata]
name = cloudtask
version = attr: cloudtask.__version__
url = https://github.com/txiocoder/dj-cloud-task
author = AM
author_email = txiocoder@gmail.com
maintainer = AM
maintainer_email = txiocoder@gmail.com
description = Integrate Django with Google Cloud Task Queue 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT-Licence
classifiers =
    Development Status :: 0.1 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/txiocoder/dj-cloud-task
    Source = https://github.com/txiocoder/dj-cloud-task
keywords =
    django
    cloud task
    tasks
    google cloud
    google cloud tasks

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    django >= 3.2.*
    google-cloud-tasks >= 2.5.*
    requests >= 2